# waffle_NlogN_ext

./: .gitignore  BUILD.md
nlogn/: .gitignore  preprocessor.py  proxy.thrift  server.py
nlogn/nln_proxy/: .gitignore  CMakeLists.txt  build.sh
nlogn/nln_proxy/cmake-modules/: Dependencies.cmake
nlogn/nln_proxy/src/: nln_actor.h  nln_client.cpp  nln_client.h  nln_levels.h  nln_proxy.cpp  nln_proxy.h  nln_server.cpp  waffle_thrift.cpp  waffle_thrift.h  waffle_thrift_response.cpp  waffle_thrift_response.h  waffle_thrift_response_server.skeleton.cpp  waffle_thrift_server.skeleton.cpp
nlogn/nln_proxy/src/waffle/: queue.h  thrift_response_client.h  thrift_response_client_map.h
nlogn/proxy/: __init__.py  constants.py  ttypes.py  waffle_thrift-remote  waffle_thrift.py  waffle_thrift_response-remote  waffle_thrift_response.py
waffle/: .gitignore
waffle/cmake-modules/: Dependencies.cmake
waffle/proxy/src/: waffle_proxy.cpp
waffle/server/src/: proxy_server.cpp
